modify main page with pixel perfect

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="sidebar">
-                    <div class="sidebar-items">
+                    <div class="sidebar-items sidebar-items--image">
                         <img class="sidebar-image" src="image/user-main.png" alt="user photo">
                         <div class="progress-bar-wrap">
                             <div class="progress-bar"></div>
@@ -147,7 +147,7 @@
                     <h1 class="content-heading">Información Personal</h1>
                     <div class="content-title">
                         <h2 class="content-title--text content-title--text-light">Tu ID de Usuario
-                            <span>2 8 6 4 6 5</span>
+                            <span>2 8 6 4 6 5 2</span>
                         </h2>
                     </div>
                     <form action="" class="content-from">
@@ -192,7 +192,7 @@
                                 <Button class="btn btn-border">Verificar</Button>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row form-row--number">
                             <label class="form-label form-label--lock--pink" for="form-phone">Número de teléfono<span class="bubble-label--lock">Privado</span></label>
                             <div class="form--number">
                                 <input class="form-field--number" id="form-phone" type="email">
@@ -200,10 +200,10 @@
                             </div>
                         </div>
                     </form>
-                    <div class="content-title">
+                    <div class="content-title content-title--second">
                         <h2 class="content-title--text">Dirección de Casa</h2>
                     </div>
-                    <form action="" class="content-from">
+                    <form action="" class="content-from content-from--second">
                         <div class="form-row">
                             <label class="form-label" for="form-country">País</label>
                             <input class="form-field" id="form-country" type="text">
@@ -229,7 +229,7 @@
                             <input class="form-field form-field--select" id="form-code" type="text">
                         </div>
                     </form>
-                    <div class="content-title">
+                    <div class="content-title content-title--third">
                         <h2 class="content-title--text">Redes Sociales conectadas</h2>
                     </div>
 
