--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div class="rating">
                                 <input type="radio" id="star5" name="rating" value="5" />
                                 <label class="full" for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" />
+                                <input type="radio" id="star4" name="rating" value="4" checked/>
                                 <label class="full" for="star4" title="Pretty good - 4 stars"></label>
                                 <input type="radio" id="star3" name="rating" value="3" />
                                 <label class="full" for="star3" title="Meh - 3 stars"></label>
@@ -152,7 +152,7 @@
                     </div>
                     <form action="" class="content-from">
                         <div class="form-row form-row--inform">
-                            <label class="form-label form-label--lock" for="form-user">Nombre de usuario<span class="bubble-label--lock">Privado</span></label>
+                            <label class="form-label form-label--lock form-label--require" for="form-user">Nombre de usuario<span class="bubble-label--lock">Privado</span></label>
                             <div class="form-field--inform">
                                 <input class="form-field" id="form-user" type="text">
                                 <div class="inform-wrap">
@@ -161,9 +161,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row form-row--error">
                             <label class="form-label form-label--lock" for="form-name">Nombre<span class="bubble-label--lock">Privado</span></label>
                             <input class="form-field" id="form-name" type="text">
+                            <span class="form-text-error">Error</span>
                         </div>
                         <div class="form-row form-row--inform">
                             <label class="form-label form-label--lock" for="form-surname">Primer Apellido<span class="bubble-label--lock">Privado</span></label>
@@ -335,19 +336,19 @@
                     <p class="modal-form--subtitle">It is a long established fact that a reader will be distracted by the readable content when looking at
                         its layout. The point of using Lorem Ipsum is that it has a +/- normal distribution. </p>
                     <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Email">
+                        <input type="text" class="modal-form--field" placeholder="Correo electrónico">
                     </div>
                     <div class="modal-form--field--row modal-form--field-hide">
-                        <input type="password" class="modal-form--field" placeholder="Email">
+                        <input type="password" class="modal-form--field" placeholder="">
                         <span>Tu contraseña debe tener al menos 8 caracteres, con al menos una letra y al menos un número o carácter
                             especial.
                         </span>
                     </div>
                     <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Email">
+                        <input type="text" class="modal-form--field" placeholder="Nombre">
                     </div>
                     <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Email">
+                        <input type="text" class="modal-form--field" placeholder="Appelido(s)">
                     </div>
                     <div class="modal-form--btn">
                         <button class="btn btn-solid">¡Registrarme!</button>
