--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
                 <div class="logo">
                     <a href="#" class="logo-link"></a>
                 </div>
-                <input type="checkbox" id="checkbox" class="menu_mobile_checkbox"/>
-                <label class="burger" for="checkbox">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
                 <ul class="menu">
                     <li class="menu-item">
                         <a class="menu-link" href="#modal">Login</a>
@@ -61,11 +55,22 @@
     </header>
 
     <main class="main">
+
         <div class="container">
             <div class="row">
+                <input type="checkbox" id="checkbox" class="menu_mobile_checkbox" />
+                <label class="burger" for="checkbox">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
                 <div class="sidebar">
                     <div class="sidebar-items sidebar-items--image">
-                        <img class="sidebar-image" src="image/user-main.png" alt="user photo">
+                        <div class="sidebar-image">
+                            <span class="sidebar-image--success"></span>
+                            <img src="image/photo.jpg" alt="user photo">
+                        </div>
+
                         <div class="progress-bar-wrap">
                             <div class="progress-bar"></div>
                         </div>
@@ -77,7 +82,7 @@
                             <div class="rating">
                                 <input type="radio" id="star5" name="rating" value="5" />
                                 <label class="full" for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" checked/>
+                                <input type="radio" id="star4" name="rating" value="4" checked />
                                 <label class="full" for="star4" title="Pretty good - 4 stars"></label>
                                 <input type="radio" id="star3" name="rating" value="3" />
                                 <label class="full" for="star3" title="Meh - 3 stars"></label>
@@ -152,7 +157,8 @@
                     </div>
                     <form action="" class="content-from">
                         <div class="form-row form-row--inform">
-                            <label class="form-label form-label--lock form-label--require" for="form-user">Nombre de usuario<span class="bubble-label--lock">Privado</span></label>
+                            <label class="form-label form-label--lock form-label--require" for="form-user">Nombre de
+                                usuario<span class="bubble-label--lock">Privado</span></label>
                             <div class="form-field--inform">
                                 <input class="form-field" id="form-user" type="text">
                                 <div class="inform-wrap">
@@ -177,7 +183,8 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <label class="form-label form-label--lock" for="form-surname-second">Segundo Apellido<span class="bubble-label--lock">Privado</span></label>
+                            <label class="form-label form-label--lock" for="form-surname-second">Segundo Apellido<span
+                                    class="bubble-label--lock">Privado</span></label>
                             <input class="form-field" id="form-surname-second" type="text">
                         </div>
                         <div class="form-row form-row--select">
@@ -187,7 +194,7 @@
                                     <option value="">Hombre</option>
                                 </select>
                             </div>
-                            
+
                         </div>
                         <div class="form-row">
                             <label class="form-label" for="form-email">Correo electrónico</label>
@@ -197,7 +204,8 @@
                             </div>
                         </div>
                         <div class="form-row form-row--number">
-                            <label class="form-label form-label--lock--pink" for="form-phone">Número de teléfono<span class="bubble-label--lock">Privado</span></label>
+                            <label class="form-label form-label--lock--pink" for="form-phone">Número de teléfono<span
+                                    class="bubble-label--lock">Privado</span></label>
                             <div class="form--number">
                                 <input class="form-field--number" id="form-phone" type="email">
                                 <Button class="btn btn-succes">Verificado</Button>
@@ -328,57 +336,61 @@
         </div>
     </footer>
     <div class="modal" id="modal">
-        <a class="modal-btn-close btn" href="#"></a>
-        <div class="modal-container">
-            <div class="modal-header">
-                <div class="modal-title">
-                    <h2>ENCUENTRA. NEGOCIA. ¡ESTÁS LISTO!</h2>
-                </div>
-            </div>
-            <div class="modal-body">
-                <form class="modal-form" action="">
-                    <h3 class="modal-form--title">¡Únete a Cambiauto!</h3>
-                    <p class="modal-form--subtitle">It is a long established fact that a reader will be distracted by the readable content when looking at
-                        its layout. The point of using Lorem Ipsum is that it has a +/- normal distribution. </p>
-                    <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Correo electrónico">
-                    </div>
-                    <div class="modal-form--field--row modal-form--field-hide">
-                        <input type="password" class="modal-form--field" placeholder="">
-                        <span>Tu contraseña debe tener al menos 8 caracteres, con al menos una letra y al menos un número o carácter
-                            especial.
-                        </span>
-                    </div>
-                    <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Nombre">
-                    </div>
-                    <div class="modal-form--field--row">
-                        <input type="text" class="modal-form--field" placeholder="Appelido(s)">
-                    </div>
-                    <div class="modal-form--btn">
-                        <button class="btn btn-solid">¡Registrarme!</button>
-                    </div>
-                </form>
-                <div class="modal-social-btn">
-                    <div class="modal-social-btn-wrap">
-                        <button class="btn btn-social btn-facebook">Conectar con Facebook</button>
-                        <button class="btn btn-social btn-google">Conectar con Google</button>
-                        <p class="modal-error-msg"> Esta cuenta ya se encuentra registrada. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
+        <div class="modal-container--outer">
+            <a class="modal-btn-close btn" href="#"></a>
             <div class="modal-container">
-                <p class="modal-footer--text">
-                    <a href="#" class="modal-footer--link">¿Eres un Negocio o Agencia? </a>
-                </p>
-                <p class="modal-footer--text">Al registrarme, declaro que soy mayor de edad y acepto las
-                    <a href="#" class="modal-footer--link">Políticas de Privacidad</a>y los érminos y
-                    <a href="#" class="modal-footer--link">Condiciones de Cambiauto.</a>
-                </p>
+                <div class="modal-header">
+                    <div class="modal-title">
+                        <h2>ENCUENTRA. NEGOCIA. ¡ESTÁS LISTO!</h2>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <form class="modal-form" action="">
+                        <h3 class="modal-form--title">¡Únete a Cambiauto!</h3>
+                        <p class="modal-form--subtitle">It is a long established fact that a reader will be distracted
+                            by the readable content when looking at
+                            its layout. The point of using Lorem Ipsum is that it has a +/- normal distribution. </p>
+                        <div class="modal-form--field--row">
+                            <input type="text" class="modal-form--field" placeholder="Correo electrónico">
+                        </div>
+                        <div class="modal-form--field--row modal-form--field-hide">
+                            <input type="password" class="modal-form--field" placeholder="">
+                            <span>Tu contraseña debe tener al menos 8 caracteres, con al menos una letra y al menos un
+                                número o carácter
+                                especial.
+                            </span>
+                        </div>
+                        <div class="modal-form--field--row">
+                            <input type="text" class="modal-form--field" placeholder="Nombre">
+                        </div>
+                        <div class="modal-form--field--row">
+                            <input type="text" class="modal-form--field" placeholder="Appelido(s)">
+                        </div>
+                        <div class="modal-form--btn">
+                            <button class="btn btn-solid">¡Registrarme!</button>
+                        </div>
+                    </form>
+                    <div class="modal-social-btn">
+                        <div class="modal-social-btn-wrap">
+                            <button class="btn btn-social btn-facebook">Conectar con Facebook</button>
+                            <button class="btn btn-social btn-google">Conectar con Google</button>
+                            <p class="modal-error-msg"> Esta cuenta ya se encuentra registrada. </p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="modal-footer">
+                <div class="modal-container">
+                    <p class="modal-footer--text">
+                        <a href="#" class="modal-footer--link">¿Eres un Negocio o Agencia? </a>
+                    </p>
+                    <p class="modal-footer--text">Al registrarme, declaro que soy mayor de edad y acepto las
+                        <a href="#" class="modal-footer--link">Políticas de Privacidad</a>y los érminos y
+                        <a href="#" class="modal-footer--link">Condiciones de Cambiauto.</a>
+                    </p>
+                </div>
 
+            </div>
         </div>
     </div>
 </body>
