--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
     </header>
 
     <main class="main">
-
-        <div class="container">
-            <div class="row">
-                <input type="checkbox" id="checkbox" class="menu_mobile_checkbox" />
-                <label class="burger" for="checkbox">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
+        <input type="checkbox" id="checkbox" class="menu_mobile_checkbox" />
+        <label class="burger" for="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <div class="wrap">
+            <div class="container container-flex">
                 <div class="sidebar">
                     <div class="sidebar-items sidebar-items--image">
                         <div class="sidebar-image">
@@ -283,58 +282,58 @@
                 </div>
             </div>
         </div>
-    </main>
-    <footer class="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="logo">
-                        <a href="#" class="logo-link"></a>
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="logo">
+                            <a href="#" class="logo-link"></a>
+                        </div>
                     </div>
+                    <ul class="row footer-menu-list">
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Acerca de Nosotros</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Política de Privacidad</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Ayuda</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Certificación</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="row footer-menu-list">
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Acerca de Nosotros</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Política de Privacidad</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Ayuda</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Certificación</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Contacto</a>
-                    </li>
-                </ul>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="container">
-                <ul class="footer-bottom-items row">
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">2017-2018 Todos los derechos reservados</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">+4 076 777 351 454</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">cambiauto@cambiauto.com</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">Lun - Vie 9:00 -19:00</a>
-                    </li>
-                    <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link link-instagram"></a>
-                        <a href="#" class="footer-menu-link link-facebook"></a>
-                        <a href="#" class="footer-menu-link link-twitter"></a>
-                    </li>
-                </ul>
+            <div class="footer-bottom">
+                <div class="container">
+                    <ul class="footer-bottom-items row">
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">2017-2018 Todos los derechos reservados</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">+4 076 777 351 454</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">cambiauto@cambiauto.com</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link">Lun - Vie 9:00 -19:00</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="#" class="footer-menu-link link-instagram"></a>
+                            <a href="#" class="footer-menu-link link-facebook"></a>
+                            <a href="#" class="footer-menu-link link-twitter"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </main>
     <div class="modal" id="modal">
         <div class="modal-container--outer">
             <a class="modal-btn-close btn" href="#"></a>
@@ -394,5 +393,4 @@
         </div>
     </div>
 </body>
-
 </html>
